<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    tools:context=".AddDetails">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_account_details"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.276" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="300dp"
        android:layout_height="172dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:ems="10"
            android:hint="@string/str_First_Name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="269dp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_weight="0" />

        <EditText
            android:id="@+id/et_LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:ems="10"
            android:hint="@string/str_Last_Name"
            android:inputType="textPersonName"
            android:textColor="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="342dp" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_weight="0" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:ems="10"
            android:hint="@string/str_Enter_Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="426dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/str_save"
        android:padding="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        />
        <!--android:layout_marginStart="200dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="129dp"-->


</androidx.constraintlayout.widget.ConstraintLayout>