<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetPhoneNoActivity">

    <TextView
        android:id="@+id/tv_enter_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="90dp"
        android:text="@string/str_enter_phone_number"
        android:textColor="@android:color/primary_text_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:includeFontPadding="true"
        android:padding="10dp"
        android:text="@string/str_next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_continue_fb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/btn_continue_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button_background"
        android:includeFontPadding="true"
        android:padding="10dp"
        android:text="@string/continue_with_facebook"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/btn_continue_fb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_next" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_marginBottom="91dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="131dp"
            android:layout_height="match_parent"

            app:ccp_defaultNameCode="PK"
            app:ccp_excludedCountries="IL"
            app:ccp_rememberLastSelection="true"

            />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/et_phone_no"
            android:layout_width="169dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="phone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>